# infra

./: .editorconfig  .gitignore  AGENTS.md  Justfile  README.md  go.mod  go.sum  issuer.yaml  package-lock.json  package.json  skills-lock.json
.agents/skills/cloudformation-to-pulumi/: SKILL.md  cfn-importer.md  cloudformation-id-lookup.md  use_cases.yaml
.agents/skills/package-usage/: SKILL.md  use_cases.yaml
.agents/skills/provider-upgrade/: SKILL.md  use_cases.yaml
.agents/skills/pulumi-arm-to-pulumi/: SKILL.md  arm-import.md  (+2 more)
.codex/: config.toml
cmd/mx/: main.go
docs/: PROJECTS.md  index.md  kubernetes.md  pki.md
docs/.vitepress/: config.mts
docs/repository/: configuration.md  crds.md  index.md  layout.md  observability.md  operations.md  pulumi-model.md  security.md  workflow.md
docs/stacks/: index.md
kubernetes/: kubeadm.yaml  pong.yaml  traefik.yaml
kubernetes/config/: traefik.yaml
kubernetes/helm/: 1password.yaml  cassandra.yaml  cilium.yaml  crdb.yaml  eck.yaml  elasticsearch.yaml  jaeger.yaml  jupyterhub.yaml  kube-prometheus-stack.yaml  kubernetes-dashboard.yaml  metrics-server.yaml  opentelemetry-collector.yaml  prometheus-operator.yaml  traefik.yaml
kubernetes/kubeadm/: init.yaml
kubernetes/resources/: arcane.yaml  buildkit.yaml  calico.yaml  cert-manager.yaml  crdb-operator.yaml  crdb.yaml  debug.yaml  hubble.yaml  iperf3.yaml  istio.yaml  jaeger.yaml  jellyfin.yaml  jupyterhub.yaml  kubernetes-dashboard.yaml  metallb.yaml  nextcloud.yaml  noob.yaml  pong.yaml  prom-stack.yaml  prometheus-operator.yaml  redpanda.yaml  rook-ceph.yaml  rook-dashboard.yaml  rook-toolbox.yaml  storage.yaml  temp.yaml  traefik.yaml  transmission.yaml  vault.yaml
kubernetes/scripts/: cleanup-network.sh  rook-teardown.sh
modal/golink/: golink.py  pyproject.toml
pkg/infra/: k8s.go
pkg/k8s/: k8s.go
pkg/services/: services.go
pulumi/analytics/: Pulumi.yaml
pulumi/apps/wordpress/: Pulumi.yaml  __main__.py  pyproject.toml
pulumi/connect/: main.go
pulumi/core/networking/cf-tunnel/: .gitignore  __main__.py  pyproject.toml
pulumi/core/networking/cf-tunnel/dashboards/: cloudflare-tunnel-overview.json  cloudflare-tunnel-transport.json
pulumi/core/networking/tailscale/: Pulumi.yaml  __main__.py  pyproject.toml
pulumi/core/networking/tailscale/crds/: tailscale-operator-1.96.5.crds.yaml
pulumi/core/networking/tailscale/dashboards/: tailscale-operator-overview.json  tailscale-proxy-metrics.json
pulumi/core/operators/kuberay/: .dockerignore  .gitignore  Justfile  Pulumi.yaml  __main__.py  pyproject.toml
pulumi/core/operators/kuberay/crds/: kuberay-operator-1.6.1.crds.yaml
pulumi/core/operators/kuberay/dashboards/: data_grafana_dashboard.json  data_llm_grafana_dashboard.json  default_grafana_dashboard.json  serve_deployment_grafana_dashboard.json  serve_grafana_dashboard.json  serve_llm_grafana_dashboard.json  train_grafana_dashboard.json
pulumi/core/operators/kuberay/images/ray-uv/: Dockerfile
pulumi/data/analytics/clickhouse/: Pulumi.yaml  __main__.py  package-lock.json  pyproject.toml
pulumi/data/analytics/clickhouse/crds/: altinity-clickhouse-operator-0.26.3.crds.yaml  altinity-clickhouse-operator-0.27.0.crds.yaml
pulumi/data/analytics/slurm/: Pulumi.yaml  __main__.py  pyproject.toml
pulumi/data/analytics/slurm/dashboards/: slurm-overview.json
pulumi/data/analytics/spark/: Justfile  Pulumi.yaml  __main__.py  pyproject.toml
pulumi/data/analytics/spark/crds/: spark-operator-2.5.0.crds.yaml
pulumi/data/analytics/spark/dashboards/: spark-overview.json
pulumi/data/analytics/spark/images/spark-iceberg/: Dockerfile
pulumi/data/analytics/superset/: __main__.py  pyproject.toml
pulumi/data/databases/mysql/: Pulumi.yaml  __main__.py  pyproject.toml
pulumi/data/databases/postgres/: __main__.py  pyproject.toml
pulumi/data/streaming/flink/: Pulumi.yaml  __main__.py  pyproject.toml
pulumi/data/streaming/flink/dashboards/: flink-overview.json
pulumi/data/workflow/airflow/: Pulumi.yaml  __main__.py  main.py  pyproject.toml
pulumi/data/workflow/airflow/dashboards/: airflow-overview.json
pulumi/database/: Pulumi.yaml  main.go
pulumi/golink/: Pulumi.yaml  __main__.py
pulumi/infra_helpers/: pyproject.toml
pulumi/infra_helpers/infra_helpers/: __init__.py  grafana.py  k8s.py  postgres.py
pulumi/lib/mysql_operator_crds/: README.md  pyproject.toml
pulumi/lib/mysql_operator_crds/pulumi_mysql_operator_crds/: __init__.py  provider.py  pulumi-plugin.json
pulumi/lib/mysql_operator_crds/pulumi_mysql_operator_crds/meta/: __init__.py
pulumi/lib/mysql_operator_crds/pulumi_mysql_operator_crds/mysql/: __init__.py
pulumi/lib/mysql_operator_crds/pulumi_mysql_operator_crds/mysql/v2/: InnoDBCluster.py  InnoDBClusterList.py  InnoDBClusterPatch.py  MySQLBackup.py  MySQLBackupList.py  MySQLBackupPatch.py  MySQLClusterSetFailover.py  MySQLClusterSetFailoverList.py  MySQLClusterSetFailoverPatch.py  __init__.py  _inputs.py  outputs.py
pulumi/lib/mysql_operator_crds/pulumi_mysql_operator_crds/zalando/: __init__.py
pulumi/lib/mysql_operator_crds/pulumi_mysql_operator_crds/zalando/v1/: ClusterKopfPeering.py  ClusterKopfPeeringList.py  ClusterKopfPeeringPatch.py  KopfPeering.py  KopfPeeringList.py  KopfPeeringPatch.py  __init__.py  _inputs.py  outputs.py
pulumi/logging/: Pulumi.yaml  go.mod  index.ts  main.go  package-lock.json
pulumi/monitoring/: Pulumi.monitoring.yaml  Pulumi.yaml  go.mod  kubernetes.go  logging.go  main.go  metrics.go  prometheus.go
pulumi/objects/: Pulumi.yaml  main.go
pulumi/operators/tailscale/: Pulumi.yaml  __main__.py  pyproject.toml
pulumi/pki/: main.go
pulumi/redpanda/: Pulumi.yaml  go.mod  go.sum  main.go
pulumi/security/: Pulumi.yaml  main.go
pulumi/tailscale/: Pulumi.yaml  index.ts  package-lock.json  package.json
pulumi/temporal/: Pulumi.yaml  pyproject.toml
pulumi/tracing/: Pulumi.yaml  main.go
pulumi/vault/: main.go  tls.go
pulumi/workspace/: Pulumi.yaml  main.go
pyinfra/kubernetes/: deploy.py  inventory.py  pyproject.toml
scripts/: generate_crd_package.sh
systemd/: step-ca.service
(+379 files in other folders)
