[project]
name = "wordpress"
version = "0.1.0"
description = "Pulumi infrastructure deployment"
requires-python = ">=3.12"
dependencies = [
    "pulumi>=3.239.0,<4.0.0",
    "pulumi-kubernetes>=4.31.0,<5.0.0",
    "pulumi_mysql_operator_crds",
    "pulumi-random>=4.20.0,<5.0.0",
]

[tool.uv.sources]
pulumi_mysql_operator_crds = { path = "../../lib/mysql_operator_crds" }
