[project]
name = "cloudflare-tunnel"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pulumi>=3.239.0,<4.0.0",
    "pulumi-kubernetes>=4.31.0,<5.0.0",
    "infra-helpers",
    "pulumi_monitoring_crds",
]

[tool.uv.sources]
infra-helpers = { path = "../../../infra_helpers", editable = true }
pulumi_monitoring_crds = { path = "../../../lib/monitoring_crds" }

[tool.pyright]
venvPath = "."
venv = ".venv"
