[project]
name = "tailscale"
version = "0.1.0"
description = "tailscale operator"
requires-python = ">=3.12"
dependencies = [
    "pulumi>=3.234.0,<4.0.0",
    "pulumi-kubernetes>=4.30.0,<5.0.0",
    "pulumi_monitoring_crds",
    "pulumi_tailscale_crds",
]

[tool.uv.sources]
pulumi_monitoring_crds = { path = "../../../lib/monitoring_crds" }
pulumi_tailscale_crds = { path = "../../../lib/tailscale_crds" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
