[project]
name = "tailscale"
version = "0.1.0"
description = "tailscale operator"
requires-python = ">=3.12"
dependencies = [
    "pulumi>=3.239.0,<4.0.0",
    "pulumi-kubernetes>=4.31.0,<5.0.0",
    "infra-helpers",
    "pulumi_monitoring_crds",
    "pulumi_tailscale_crds",
]

[tool.uv.sources]
infra-helpers = { path = "../../../infra_helpers", editable = true }
pulumi_monitoring_crds = { path = "../../../lib/monitoring_crds" }
pulumi_tailscale_crds = { path = "../../../lib/tailscale_crds" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
