[project]
name = "kuberay"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pulumi>=3.234.0,<4.0.0",
    "pulumi-kubernetes>=4.30.0,<5.0.0",
    "pulumi_kuberay_crds",
    "pulumi_monitoring_crds",
]

[tool.uv.sources]
pulumi_kuberay_crds = { path = "../../../lib/kuberay_crds" }
pulumi_monitoring_crds = { path = "../../../lib/monitoring_crds" }
