[project]
name = "clickhouse"
version = "0.1.0"
description = "ClickHouse analytics database deployment"
requires-python = ">=3.12"
dependencies = [
    "pulumi>=3.234.0,<4.0.0",
    "pulumi-kubernetes>=4.30.0,<5.0.0",
    "pulumi_clickhouse_operator_crds",
    "pulumi-random>=4.19.2,<5.0.0",
]

[tool.uv.sources]
pulumi_clickhouse_operator_crds = { path = "../../../lib/clickhouse_operator_crds" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["__main__.py"]
