[project]
name = "spark"
version = "0.1.0"
description = "Pulumi infrastructure deployment"
requires-python = ">=3.12"
dependencies = [
    "pulumi-kubernetes>=4.30.0,<5.0.0",
    "pulumi_spark_operator_crds",
    "pulumi>=3.234.0,<4.0.0",
]

[tool.uv.sources]
pulumi_spark_operator_crds = { path = "../../../lib/spark_operator_crds" }
