[project]
name = "spark"
version = "0.1.0"
description = "Pulumi infrastructure deployment"
requires-python = ">=3.12"
dependencies = [
    "pulumi-kubernetes>=4.31.0,<5.0.0",
    "infra-helpers",
    "pulumi_spark_operator_crds",
    "pulumi>=3.239.0,<4.0.0",
]

[tool.uv.sources]
infra-helpers = { path = "../../../infra_helpers", editable = true }
pulumi_spark_operator_crds = { path = "../../../lib/spark_operator_crds" }
