[project]
name = "superset"
version = "0.1.0"
description = "Pulumi infrastructure deployment"
requires-python = ">=3.12"
dependencies = [
    "infra-helpers[postgres]",
    "pulumi-kubernetes>=4.31.0,<5.0.0",
    "pulumi>=3.239.0,<4.0.0",
    "pulumi-random>=4.20.0,<5.0.0",
]

[tool.uv.sources]
infra-helpers = { path = "../../../infra_helpers", editable = true }
