[project]
name = "kzh-infra-airflow"
version = "0.1.0"
description = "Pulumi infrastructure deployment"
requires-python = ">=3.12"
dependencies = [
    "pulumi-kubernetes>=4.31.0,<5.0.0",
    "infra-helpers[postgres]",
    "pulumi_monitoring_crds",
    "pulumi-random>=4.20.0,<5.0.0",
    "pulumi>=3.239.0,<4.0.0",
]

[tool.uv.sources]
infra-helpers = { path = "../../../infra_helpers", editable = true }
pulumi_monitoring_crds = { path = "../../../lib/monitoring_crds" }
